2008-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/properties/bacon-video-widget-properties.c
	(bacon_video_widget_properties_from_metadata): Fix warnings
	playing back video from
	http://bugzilla.gnome.org/show_bug.cgi?id=564053

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (playlist_remove_files): Remove
	dead code

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_uri_is_subtitle):
	* src/totem-uri.h: Add totem_uri_is_subtitle() to check
	whether a URI is a subtitle

	* src/totem-playlist.c (totem_playlist_set_current_subtitle):
	* src/totem-playlist.h: Add totem_playlist_set_current_subtitle()
	to set the subtitle for the currently playing movie

	* src/totem.c (totem_action_drop_files): When dropping files
	on the video widget, if there's only one file, and it looks
	like a subtitle, use it for the currently playing movie

	(Closes: #469566)

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (drop_video_cb): Fix some calls to
	gtk_drag_finish()

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	* lib/totem-scrsaver.c (screensaver_disable_x11):
	* src/totem-statusbar.c (totem_statusbar_push):
	Use g_timeout_add_seconds instead of g_timeout_add for
	a couple of non time critical places

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem-menu.c (select_subtitle_action_callback):
	* src/totem-playlist.c (totem_playlist_select_subtitle_dialog),
	(playlist_select_subtitle_action_callback):
	* src/totem-playlist.h:
	* src/totem-uri.c:
	* src/totem-uri.h:
	* src/totem.c (totem_action_set_mrl_with_warning):
	Patch from Kamil Pawlowski <kamilpe@gmail.com> to allow
	selecting a text subtitle for the currently playing
	movie, from the View menu (Closes: #499463)

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-dnd-menu.c (drag_menu_deactivate_callback),
	(totem_drag_ask):
	* src/totem-playlist.c (drop_cb):